# NESEmulatorOnNativeActivity

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-activity.cpp
app/src/main/cpp/include/: CPU.h  Common.h  Console.h  Controller.h  Emulator.h  IMapper.h  Log.h  Mapper000.h  Mapper004.h  Memory.h  PPU.h  ROM.h
app/src/main/cpp/src/: CPU.cpp  Console.cpp  Controller.cpp  Emulator.cpp  Mapper000.cpp  Mapper004.cpp  Memory.cpp  PPU.cpp  ROM.cpp
app/src/main/java/ua/fgss/nesemulator/: MainActivity.java
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/values/: strings.xml
